Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85003

qmlformat: formatting of if statements is not stable after first formatting

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.15.1
    • 5.15.0
    • QML: Tooling
    • All
    • 15777b94ee96035be79b363f3b1e54f02b5d2cd5 (qt/qtdeclarative/dev) 6b72b1a6861ddc10356c5505a00e2204fdfe83e5 (qt/qtdeclarative/5.15)

    Description

      Based on kh-219design's bug report.

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            max.goldstein Maximilian Goldstein
            max.goldstein Maximilian Goldstein
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes