tests/auto/qml/qmlformat/data/QtBug85003.formatted.qml
@@ -1,0 +1,8 @@
+Item {
+    Component.onCompleted: {
+        if (3 < 2)
+            console.log("Foo");
+        else
+            console.log("Bar");
+    }
+}
