tests/auto/qml/qmlformat/data/QtBug85003.qml
@@ -1,0 +1,6 @@
+Item {
+     Component.onCompleted:
+     {
+        if (3 < 2) console.log("Foo"); else { console.log("Bar"); }
+     }
+}
